added margin to the buttons

--- a/convo.html
+++ b/convo.html
@@ -19,7 +19,8 @@
   <div id="adminCon" style="visibility: hidden;">
     <button id="deleteRemindersBtn">delete reminders</button>
   </div>
-  <div id="pasteBtns"><div class="pasteBtnSection shrugBtns">
+  <div id="pasteBtns">
+    <div class="pasteBtnSection shrugBtns">
         <p>Shrug</p>
         <button class="pasteBtn">¯\_(ツ)_/¯</button>
     </div>
