--- a/convo.html
+++ b/convo.html
@@ -1,6 +1,6 @@
 <button id="visibilityBtn">Hide</button>
 <div id="convoBody">
-  <button id="reload">reload</button>
+  <button id="reloadBtn">reload</button>
   <canvas id="charCntChart"></canvas>
   <!--<link rel="import" href="/extensions/reminders/reminders.html">-->
   <div id="extensionsCon">
