--- a/convo.html
+++ b/convo.html
@@ -1,15 +1,13 @@
 <button id="visibilityBtn">Hide</button>
 <div id="convoBody">
   <button id="reloadBtn">reload</button>
-  <canvas id="charCntChart"></canvas>
-  <!--<link rel="import" href="/extensions/reminders/reminders.html">-->
   <div id="extensionsCon">
+    <div data-include="character-count"></div>
     <div data-include="reminders"></div>
     <div data-include="emojis"></div>
   </div>
   <div id="adminCon" style="visibility: hidden;">
     <button id="deleteRemindersBtn">delete reminders</button>
   </div>
-
   </div>
 </div>
