moved character count into its own extension and refactored how observers are handled during init and on mutation events
moved character count into its own extension and refactored how observers are handled during init and on mutation events

removed debugger

--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <button id="visibilityBtn">Hide</button>
 <div id="convoBody">
-  <button id="reloadBtn">reload</button>
+  <button id="reloadBtn">refresh</button>
   <div id="extensionsCon">
     <div data-include="character-count"></div>
     <div data-include="reminders"></div>
